tests/core/ill-typed/extra-tests/unexpected_number_of_parameters_in_lambda/test-2.stella
language core;

extend with #multiparameter-functions;

fn mk_const(a : Nat) -> fn(Nat, Nat) -> Nat {
  return fn(x : Nat, y : Nat, z : Nat) { return a }
}

fn main (n : Nat) -> Nat {
  return mk_const(n)(0, 0)
}
